<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/btn_switch_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vivo_list" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_list"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_video_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_switch_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/dedo_display_category" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_category"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_category_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="List"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_switch_player_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/screen_rotation" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_player"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_player_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Portrait"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vivo_policy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_privacy"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ymax_setting_privacy"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vivo_rate_us" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_set_rate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ymax_setting_rate"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vivo_more" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_set_more"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ymax_setting_more"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_telegram_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/telegram_settings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_set_telegram"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_telegram_sub"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vivo_about" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_set_about"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ymax_setting_about"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

